--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -714,38 +714,20 @@
                         id="project-create"
                 >
                     <div class="modal-body">
-                        <form
-                                class="row g-3"
-                                id="validation-form"
-                                action=""
-                        >
+
+<!--                        project add-->
+                        <form class="row g-3" id="validation-form" action="">
                             <div class="col-lg-6">
-                                <label
-                                        for="name"
-                                        class="col-sm-12 col-form-label"
-                                        name="name"
-                                >Project Name<span
-                                        style="color: #dec6c6"
-                                >
-                                                *</span
-                                ></label
-                                >
-                                <input
-                                        type="text"
-                                        class="form-control border-task-description"
-                                        id="name"
-                                        name="name"
-                                />
+<!--                                name input-->
+                                <label for="name" class="col-sm-12 col-form-label" name="name">Project Name<span style="color: #dec6c6">
+                                    *</span></label>
+                                <input type="text" class="form-control border-task-description" id="name" name="name"/>
                             </div>
 
+<!--                            client add-->
                             <div class="col-lg-6">
-                                <label
-                                        for="client"
-                                        class="col-sm-12 col-form-label"
-                                        name="client"
-                                >Client<span style="color: red">
-                                                *</span
-                                ></label>
+                                <label for="client" class="col-sm-12 col-form-label" name="client">Client<span style="color: red">
+                                    *</span></label>
                                 <select class="form-select" id="client" name="client">
                                     <option value="1" selected>DAT1</option>
                                     <option value="2">DAT2</option>
@@ -753,124 +735,71 @@
                                 </select>
                             </div>
 
+<!--                            start date add-->
                             <div class="col-md-6">
-                                <label
-                                        for="start_date"
-                                        class="col-sm-12 col-form-label"
-                                        name="start_date"
-                                >Start Date
-                                    <span style="color: red">
-                                                *</span
-                                    ></label
-                                >
-                                <input
-                                        type="date"
-                                        class="form-control border-task-description"
-                                        id="start_date"
-                                        name="start_date"
-                                />
+                                <label for="start_date" class="col-sm-12 col-form-label" name="start_date">Start Date<span style="color: red">
+                                    *</span></label>
+                                <input type="date" class="form-control border-task-description" id="start_date" name="start_date"/>
                             </div>
 
+
+<!--                                end date add-->
                             <div class="col-md-6">
-                                <label
-                                        for="end_date"
-                                        class="col-sm-12 col-form-label"
-                                        name="end_date"
-                                >End Date
-                                    <span style="color: red">
-                                                *</span
-                                            ></label
-                                        >
-                                        <input
-                                            type="date"
-                                            class="form-control border-task-description"
-                                            id="end_date"
-                                            name="end_date"
-                                            disabled
-                                        />
-                                    </div>
+                                <label for="end_date" class="col-sm-12 col-form-label" name="end_date">End Date<span style="color: red">
+                                    *</span></label>
+                                        <input type="date" class="form-control border-task-description" id="end_date" name="end_date" disabled/>
+                            </div>
 
-                            <div class="col-lg-6">
-                                <label
-                                        for="background"
-                                        class="col-sm-12 col-form-label"
-                                        name="background"
-                                >Background<span style="color: red">
-                                                *</span
-                                            ></label
-                                        >
-                                        <textarea
-                                            type="text"
-                                            class="form-control border-task-description"
-                                            id="background"
-                                            name="background"
-                                        ></textarea>
-                                    </div>
 
+<!--                                background add-->
                             <div class="col-lg-6">
-                                <label
-                                        for="architectures"
-                                        class="col-sm-12 col-form-label"
-                                        name="architectures"
-                                >Architecture
-                                    <span style="color: red"> *</span>
-                                </label>
+                                <label for="background" class="col-sm-12 col-form-label" name="background">Background<span style="color: red">
+                                    *</span></label>
+                                        <textarea type="text" class="form-control border-task-description" id="background" name="background"></textarea>
+                            </div>
+
+
+<!--                                architectures add-->
+                            <div class="col-lg-6">
+                                <label for="architectures" class="col-sm-12 col-form-label" name="architectures">Architecture<span style="color: red"> *</span></label>
                                 <input type="text" class="form-control" id="architectures" name="architectures" placeholder="add value" value="css,html,javascript" />
                             </div>
 
+
+<!--                                systemoutline add-->
                             <div class="col-lg-6">
-                                <label
-                                        for="systemOutlines"
-                                        class="col-sm-12 col-form-label"
-                                        name="systemOutlines"
-                                >System Outlines
+                                <label for="systemOutlines" class="col-sm-12 col-form-label" name="systemOutlines">System Outlines
                                     <span style="color: red"> *</span>
                                 </label>
                                 <input type="text" class="form-control" id="systemOutlines" name="systemOutlines" placeholder="add value" value="analysis,sys_design" />
                             </div>
 
+
+<!--                                deliverable add-->
                             <div class="col-lg-6">
-                                <label
-                                        for="deliverable"
-                                        class="col-sm-12 col-form-label"
-                                        name="deliverable"
-                                >Deliverable
-                                    <span style="color: red">
-                                                *</span
-                                    ></label
-                                >
+                                <label for="deliverable" class="col-sm-12 col-form-label" name="deliverable">Deliverable<span style="color: red">
+                                    *</span></label>
                                 <input type="text" class="form-control" id="deliverable" name="deliverable" placeholder="add value" value="source code,zip" />
 
                             </div>
 
-                            <div
-                                    class="col-lg-12"
-                                    style="margin-bottom: 80px"
-                            >
-                                <label for="objective"
-                                >Objective<span style="color: red">
-                                                *</span
-                                ></label
-                                >
-                                <div
-                                        class="quill-editor-full"
-                                        id="objective"
-                                        name="objective"
-                                ></div>
+                            <div class="col-lg-12" style="margin-bottom: 80px">
+                                <label for="objective">Objective<span style="color: red">
+                                    *</span></label>
+                                <div class="quill-editor-full" id="objective" name="objective"></div>
                             </div>
 
                                     <div class="text-center">
-                                        <button
-                                            type="submit"
-                                            class="btn btn-primary col-2"
-                                            data-dismiss="modal"
-                                        >
+                                        <button type="submit" class="btn btn-primary col-2" data-dismiss="modal">
                                             Add
                                         </button>
                                     </div>
+
                                 </form>
                             </div>
                         </div>
+
+<!--                project add form end-->
 
                 <div class="tab-pane fade" id="client-create">
                     <div class="modal-body modal-lg-6">
