--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -101,7 +101,7 @@
         const fragment = document.createDocumentFragment();
 
         function getAllDepartments() {
-            return fetch('/api/department/lists')
+            return fetch('/api/department/list')
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
